generic api call func

--- a/Colors/Colors/Localized.strings
+++ b/Colors/Colors/Localized.strings
@@ -8,5 +8,5 @@
 "The hex value : " = "The hex value : ";
 "Failed to pass returned data" = "Failed to pass returned data";
 "Failed no data was returned" = "Failed no data was returned";
-"General system errror please try again later" = "General system errror please try again later";
+"Sorry seems there is a problem with the service" = "Sorry seems there is a problem with the service";
 "Colors" = "Colors";
